# wallpaper-player

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  main.js  mpv.js  package-lock.json  package.json  preload.js  vite.config.js
animation-pages/: clockwork-garden.html  index.html  neon-orbit.html  paper-aquarium.html  rain-station.html  showcase.css
docs/: dev-log-v1.2.3.md  dev-log-v1.2.4.md  dev-log-v1.2.5.md  dev-log-v1.3.0.md  mobile-client-remote-access-plan.md  mobile-real-device-qa.md  test-release-1.2.1.md  test-release-1.2.2.md
licenses/: dependency-notices.txt
main/: constants.js  download-manager.js  index.js  ipc.js  mpv-host.js  mpv-integration.js  network-resource-parser.js  paths.js  scanner.js  settings.js  thumbnail.js  updater.js  video-analysis.js  video-metadata.js  vlm-service.js  window.js  ytdlp-service.js
main/video-comprehension-runtime/: .env.example  README.md  pyproject.toml
main/video-comprehension-runtime/docs/: api_documentation.md  pipeline_io_contract.md  project_summary.md  requirements_traceability_matrix.md  technical_design.md  usage_examples.md  video_llm_pipeline_requirements.md
main/video-comprehension-runtime/video_comprehension/: __init__.py  api.py  cli.py  config.py  events.py  ffmpeg_tools.py  json_io.py  llm_client.py  paths.py  pipeline.py
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
release-notes/: v1.1.2.md  v1.2.0.md  v1.2.2.md  v1.2.3.md  v1.2.4.md  v1.2.5.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.3.3.md  v1.4.0.md
scripts/: package-plugins.js  (+28 more)
(+124 files in other folders)
